tests/chainsaw-multi-ns/gateway-multi-operator/namespace-a/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-a
  namespace: namespace-a
spec:
  parentRefs:
    - name: gateway-a
      namespace: namespace-a
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gateway-service-a
          port: 80
