tests/chainsaw-multi-ns/gateway-multi-operator/namespace-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-a
  namespace: namespace-a
  labels:
    app.kubernetes.io/name: gateway-test-server-a
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: gateway-test-server-a
